Update managing.md